--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -1,1 +1,203 @@
-#yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+  namespace: my-app
+  labels:
+    app: nginx-dep
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx-app
+  template:
+    metadata:
+      labels:
+        app: nginx-app
+    spec:
+      containers:
+        - name: nginx-app
+          image: nginx:1.14.2
+          ports:
+            - containerPort: 80
+          resources:
+            limits:
+              cpu: "2m"
+              memory: "7Mi"
+            requests:
+              cpu: "1m"
+              memory: "6Mi"
+          envFrom:
+            - configMapRef:
+                name: nginx-cm
+            - configMapRef:
+                name: nginx-cm-1
+          volumeMounts:
+            - name: nginx-volume
+              mountPath: /usr/share/nginx/html/index.html
+              subPath: index.html
+      volumes:
+        - name: nginx-volume
+          configMap:
+            name: nginx-cm-2
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-svc-2
+spec:
+  type: ClusterIP
+  ports:
+    - protocol: TCP
+      port: 3000
+      targetPort: 80
+  selector:
+    app: nginx-app
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-cm
+data:
+  start_path: "/usr/share/nginx/html"
+  run_time: "5min"
+  environment: "dev"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-cm-1
+data:
+  name: gokul
+  age: "20"
+  dob: "nov-2004"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-cm-2
+data:
+  index.html: |
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Stunning HTML Page Example</title>
+      <meta name="description" content="A visually stunning HTML page example following modern web best practices.">
+      <meta name="keywords" content="HTML, CSS, Stunning, Web Design, Example">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+      <style>
+        body {
+          margin: 0;
+          font-family: 'Open Sans', Arial, sans-serif;
+          background: linear-gradient(135deg, #4f8cff 0%, #b6e0fe 100%);
+          color: #222;
+          min-height: 100vh;
+          display: flex;
+          flex-direction: column;
+        }
+        header {
+          background: rgba(255,255,255,0.9);
+          padding: 2rem 0 1rem 0;
+          text-align: center;
+          box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+        }
+        header h1 {
+          font-family: 'Montserrat', sans-serif;
+          font-size: 2.8rem;
+          margin: 0 0 0.5rem 0;
+          color: #2a5298;
+          text-shadow: 1px 1px 6px #b6e0fe;
+        }
+        header p {
+          font-size: 1.2rem;
+          color: #555;
+          margin: 0;
+        }
+        main {
+          flex: 1;
+          max-width: 900px;
+          margin: 2rem auto;
+          background: #fff;
+          border-radius: 1rem;
+          box-shadow: 0 8px 32px rgba(44, 62, 80, 0.15);
+          padding: 2rem 2.5rem;
+        }
+        section {
+          margin-bottom: 2rem;
+        }
+        h2 {
+          color: #4f8cff;
+          margin-top: 0;
+        }
+        ul {
+          padding-left: 1.5rem;
+        }
+        figure {
+          margin: 2rem 0;
+          text-align: center;
+        }
+        figure img {
+          max-width: 100%;
+          border-radius: 0.5rem;
+          box-shadow: 0 4px 16px rgba(44, 62, 80, 0.12);
+        }
+        figcaption {
+          font-size: 1rem;
+          color: #555;
+          margin-top: 0.5rem;
+        }
+        footer {
+          text-align: center;
+          padding: 1.5rem 0;
+          background: rgba(255,255,255,0.8);
+          color: #888;
+          font-size: 1rem;
+          border-top: 1px solid #e0e0e0;
+        }
+        @media (max-width: 600px) {
+          main {
+            padding: 1rem 0.5rem;
+          }
+          header h1 {
+            font-size: 2rem;
+          }
+        }
+      </style>
+    </head>
+    <body>
+      <header>
+        <h1>Stunning HTML Page</h1>
+        <p>A modern, responsive, and visually appealing HTML template.</p>
+      </header>
+      <main>
+        <section>
+          <h2>Why This Page Stands Out</h2>
+          <ul>
+            <li>Semantic HTML structure for accessibility and SEO</li>
+            <li>Responsive design for all devices</li>
+            <li>Modern Google Fonts and subtle gradients</li>
+            <li>Clean, readable code following best practices</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Sample Visual</h2>
+          <figure>
+            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" alt="Stunning landscape">
+            <figcaption>Nature's beauty, captured in a stunning photograph.</figcaption>
+          </figure>
+        </section>
+        <section>
+          <h2>Get Started</h2>
+          <p>
+            Use this template as a starting point for your next web project. Customize the content, colors, and images to make it your own!
+          </p>
+        </section>
+      </main>
+      <footer>
+        &copy; 2025 Stunning HTML Example &mdash; Crafted with <span aria-label="love">❤️</span>
+      </footer>
+    </body>
+    </html>    
+    
